platform/overlays/aks/sealed-secrets-controller-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sealed-secrets-controller
  namespace: kube-system
spec:
  template:
    metadata:
      labels:
        name: sealed-secrets-controller
    spec:
      containers:
        - command:
            - controller
          image: quay.io/bitnami/sealed-secrets-controller:v0.7.0
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
          name: sealed-secrets-controller
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1001
      serviceAccountName: sealed-secrets-controller
---
apiVersion: v1
kind: Service
metadata:
  name: sealed-secrets-controller
  namespace: kube-system
spec:
  ports:
    - port: 8080
  selector:
    name: sealed-secrets-controller
